--- a/PankKortRekk/bin/KorttiRekisteri/PaaikkunaGUIView.fxml
+++ b/PankKortRekk/bin/KorttiRekisteri/PaaikkunaGUIView.fxml
@@ -14,6 +14,7 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
@@ -21,112 +22,134 @@
    <top>
       <BorderPane prefHeight="492.0" prefWidth="1185.0" BorderPane.alignment="CENTER">
          <left>
-            <Pane pickOnBounds="false" prefHeight="467.0" prefWidth="647.0" BorderPane.alignment="CENTER">
+            <Pane prefHeight="467.0" prefWidth="647.0" BorderPane.alignment="CENTER">
                <children>
-                  <ScrollPane fx:id="panelKortti" fitToHeight="true" fitToWidth="true" layoutX="657.0" layoutY="77.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="52.0" prefWidth="724.0">
-                     <content>
-                        <StringGrid fx:id="tableDebit" editable="true" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="722.0" rivit="Korttityyppi|Päivämäärä|Korttinumero|PIN|CVC|Lähimaksu|VPT|Salasana" BorderPane.alignment="CENTER" />
-                     </content>
-                     </ScrollPane>
-                  
-                  <ScrollPane fx:id="panelAsiakas" fitToWidth="true" layoutX="250.0" layoutY="79.0" pannable="true" prefHeight="347.0" prefWidth="392.0" BorderPane.alignment="CENTER">
-    <content>
-        <GridPane fx:id="gridAsiakas" hgap="10.0" prefHeight="345.0" prefWidth="385.0" style="-fx-font-size: 14px;">
-            <!-- Added padding to shift contents to the right -->
-            <padding>
-                <Insets bottom="10.0" left="20.0" right="10.0" top="10.0" />
-            </padding>
-            <columnConstraints>
-                <ColumnConstraints fillWidth="false" halignment="RIGHT" hgrow="NEVER" maxWidth="253.0" minWidth="50.0" prefWidth="141.0" />
-                <ColumnConstraints hgrow="ALWAYS" maxWidth="294.0" minWidth="10.0" prefWidth="189.0" />
-            </columnConstraints>
-            <rowConstraints>
-                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="52.0" minHeight="10.0" prefHeight="52.0" vgrow="SOMETIMES" />
-            </rowConstraints>
-            <children>
-                <Label text="nimi" />
-                <Label text="hetu" GridPane.rowIndex="1" />
-                <Label text="katuosoite" GridPane.rowIndex="2" />
-                <Label text="postinumero" GridPane.rowIndex="3" />
-                <Label text="postitoimipaikka" GridPane.rowIndex="4" />
-                <Label text="puhelinnumero" GridPane.rowIndex="5" />
-                <Label text="sähköposti" GridPane.rowIndex="6" />
-                <TextField fx:id="editNimi" text="Erik Sandren" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" />
-                <TextField fx:id="editHetu" text="010245-123U" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
-                <TextField fx:id="editKatuosoite" text="Paratiisitie 13" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" />
-                <TextField fx:id="editPostinumero" text="40740" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" />
-                <TextField fx:id="editPostiToimipaikka" prefHeight="30.0" prefWidth="358.0" text="Helsinki" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" />
-                <TextField fx:id="editPuhelinnumero" text="358445566778" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" />
-                <TextField fx:id="editSahkoposti" text="erik@feetpics.com" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6" />
-            </children>
-        </GridPane>
-    </content>
-</ScrollPane>
-
-
-                  
-					<TextField alignment="CENTER" layoutX="657.0" layoutY="140.0" prefHeight="26.0" prefWidth="182.0" text="Luottokortin tiedot" />
-      						<ScrollPane fx:id="panelCredit" fitToHeight="true" fitToWidth="true" layoutX="657.0" layoutY="166.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="52.0" prefWidth="724.0">
-      							<content>
-      							<StringGrid fx:id="tableCredit" editable="true" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="722.0" rivit="Korttityyppi|Päivämäärä|Korttinumero|PIN|CVC|Lähimaksu|VPT|Salasana" BorderPane.alignment="CENTER" />
-      							</content>
-      						</ScrollPane>
-
-					<TextField alignment="CENTER" layoutX="657.0" layoutY="229.0" prefHeight="26.0" prefWidth="181.0" text="Yhdistelmäkortin tiedot" />
-						<ScrollPane fx:id="panelYhdistelma" fitToHeight="true" fitToWidth="true" layoutX="657.0" layoutY="255.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="52.0" prefWidth="724.0">
-   							<content>
-      							<StringGrid fx:id="tableYhdistelma" editable="true" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="722.0" rivit="Korttityyppi|Päivämäärä|Korttinumero|PIN|CVC|Lähimaksu|VPT|Salasana" BorderPane.alignment="CENTER" />
-  							 </content>
-						</ScrollPane>
-                  
-                        
                   <ListChooser fx:id="chooserAsiakkaat" layoutX="14.0" layoutY="77.0" prefHeight="349.0" prefWidth="224.0" />
                   <TextField layoutX="14.0" layoutY="51.0" text="Jäsenlista" />
-                  <TextField layoutX="250.0" layoutY="51.0" text="Jäsenen tiedot" />
-                  <TextField alignment="CENTER" layoutX="657.0" layoutY="51.0" prefHeight="26.0" prefWidth="184.0" text="Debit kortin tiedot" />
-                  <Button layoutX="74.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleLisaaAsiakas" text="Uusi Asiakas" />
-                  <Button layoutX="250.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleLisaaDebitKortti" text="Lisää debit" />
-                  <Button layoutX="380.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleLisaaLuottoKortti" text="Lisää luottokortti" />
-                  <Button layoutX="514.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleLisaaYhdistelmaKortti" text="Lisää yhdistelmäkortti" />
+                  <TextField layoutX="250.0" layoutY="51.0" text="Jäsenen tiedot" />                 
+
+                  <Button layoutX="14.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleLisaaAsiakas" text="Uusi Asiakas" />
+                  <Button layoutX="147.0" layoutY="435.0" mnemonicParsing="false" onAction="#handlePoistaAsiakas" text="Poista Asiakas" />
+                  <Button layoutX="250.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleLisaaDebitKortti" text="Lisää Debit" />
+                  <Button layoutX="380.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleLisaaLuottoKortti" text="Lisää Credit" />
+                  <Button layoutX="514.0" layoutY="435.0" mnemonicParsing="false" onAction="#handleLisaaYhdistelmaKortti" text="Lisää Yhdistelmä" />
+                  
                   <ComboBoxChooser fx:id="cbKentat" layoutX="250.0" layoutY="14.0" onAction="#handleHakuehto" prefHeight="26.0" prefWidth="161.0" />
                   <TextField fx:id="hakuehto" layoutX="14.0" layoutY="14.0" onKeyReleased="#handleHakuehto" />
+
+
+                  <HBox layoutX="657.0" layoutY="51.0" spacing="10.0">
+                     <TextField alignment="CENTER" editable="false" prefHeight="26.0" prefWidth="182.0" text="Debit kortin tiedot" />
+                     <Button mnemonicParsing="false" onAction="#handlePoistaDebit" text="Poista debit" />
+                  </HBox>
+                  <ScrollPane fx:id="panelKortti" fitToHeight="true" fitToWidth="true" layoutX="657.0" layoutY="77.0" prefHeight="52.0" prefWidth="724.0">
+                     <content>
+                        <StringGrid fx:id="tableDebit" editable="true" prefHeight="50.0" prefWidth="722.0" rivit="Korttityyppi|Päivämäärä|Korttinumero|PIN|CVC|Lähimaksu|VPT|Salasana" />
+                     </content>
+                  </ScrollPane>
+
+
+                  <HBox layoutX="657.0" layoutY="140.0" spacing="10.0">
+                     <TextField alignment="CENTER" editable="false" prefHeight="26.0" prefWidth="182.0" text="Luottokortin tiedot" />
+                     <Button mnemonicParsing="false" onAction="#handlePoistaCredit" text="Poista luottokortti" />
+                  </HBox>
+                  <ScrollPane fx:id="panelCredit" fitToHeight="true" fitToWidth="true" layoutX="657.0" layoutY="166.0" prefHeight="52.0" prefWidth="724.0">
+                     <content>
+                        <StringGrid fx:id="tableCredit" editable="true" prefHeight="50.0" prefWidth="722.0" rivit="Korttityyppi|Päivämäärä|Korttinumero|PIN|CVC|Lähimaksu|VPT|Salasana" />
+                     </content>
+                  </ScrollPane>
+
+
+                  <HBox layoutX="657.0" layoutY="229.0" spacing="10.0">
+                     <TextField alignment="CENTER" editable="false" prefHeight="26.0" prefWidth="181.0" text="Yhdistelmäkortin tiedot" />
+                     <Button mnemonicParsing="false" onAction="#handlePoistaYhdistelma" text="Poista yhdistelmäkortti" />
+                  </HBox>
+                  <ScrollPane fx:id="panelYhdistelma" fitToHeight="true" fitToWidth="true" layoutX="657.0" layoutY="255.0" prefHeight="52.0" prefWidth="724.0">
+                     <content>
+                        <StringGrid fx:id="tableYhdistelma" editable="true" prefHeight="50.0" prefWidth="722.0" rivit="Korttityyppi|Päivämäärä|Korttinumero|PIN|CVC|Lähimaksu|VPT|Salasana" />
+                     </content>
+                  </ScrollPane>
+
+
+                  <ScrollPane fx:id="panelAsiakas" fitToWidth="true" layoutX="250.0" layoutY="79.0" pannable="true" prefHeight="347.0" prefWidth="392.0">
+                     <content>
+                        <GridPane fx:id="gridAsiakas" hgap="10.0" prefHeight="345.0" prefWidth="385.0" style="-fx-font-size: 14px;">
+                           <padding>
+                              <Insets bottom="10.0" left="20.0" right="10.0" top="10.0" />
+                           </padding>
+                           <columnConstraints>
+                              <ColumnConstraints fillWidth="false" halignment="RIGHT" hgrow="NEVER" maxWidth="253.0" minWidth="50.0" prefWidth="141.0" />
+                              <ColumnConstraints hgrow="ALWAYS" maxWidth="294.0" minWidth="10.0" prefWidth="189.0" />
+                           </columnConstraints>
+                           <rowConstraints>
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                              <RowConstraints maxHeight="52.0" minHeight="10.0" prefHeight="52.0" vgrow="SOMETIMES" />
+                           </rowConstraints>
+                           <children>
+                              <Label text="nimi" />
+                              <Label text="hetu" GridPane.rowIndex="1" />
+                              <Label text="katuosoite" GridPane.rowIndex="2" />
+                              <Label text="postinumero" GridPane.rowIndex="3" />
+                              <Label text="postitoimipaikka" GridPane.rowIndex="4" />
+                              <Label text="puhelinnumero" GridPane.rowIndex="5" />
+                              <Label text="sähköposti" GridPane.rowIndex="6" />
+                              <TextField fx:id="editNimi" text="Erik Sandren" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" />
+                              <TextField fx:id="editHetu" text="010245-123U" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" />
+                              <TextField fx:id="editKatuosoite" text="Paratiisitie 13" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" />
+                              <TextField fx:id="editPostinumero" text="40740" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" />
+                              <TextField fx:id="editPostiToimipaikka" prefHeight="30.0" prefWidth="358.0" text="Helsinki" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" />
+                              <TextField fx:id="editPuhelinnumero" text="358445566778" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" />
+                              <TextField fx:id="editSahkoposti" text="erik@feetpics.com" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6" />
+                           </children>
+                        </GridPane>
+                     </content>
+                  </ScrollPane>
+                  
                </children>
             </Pane>
          </left>
          <top>
             <MenuBar prefHeight="5.0" prefWidth="782.0" BorderPane.alignment="CENTER">
-              <menus>
-                <Menu mnemonicParsing="false" text="TIEDOSTO">
-                  <items>
-                    <MenuItem mnemonicParsing="false" onAction="#TestiPesti" text="Tallenna" />
+               <menus>
+                  <Menu mnemonicParsing="false" text="TIEDOSTO">
+                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#TestiPesti" text="Tallenna" />
                         <MenuItem mnemonicParsing="false" onAction="#Lopeta" text="Lopeta" />
-                  </items>
-                </Menu>
-                <Menu mnemonicParsing="true" text="MUOKKAA">
-                  <items>
-                    <MenuItem mnemonicParsing="false" onAction="#handleLisaaAsiakas" text="Lisää uusi jäsen" />
-                        <MenuItem mnemonicParsing="false" onAction="#handlePoistaJasen" text="Poista jäsen" />
+                     </items>
+                  </Menu>
+                  <Menu mnemonicParsing="true" text="MUOKKAA">
+                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#handleLisaaAsiakas" text="Lisää uusi jäsen" />
+                        <MenuItem mnemonicParsing="false" onAction="#handlePoistaAsiakas" text="Poista jäsen" />
                         <MenuItem mnemonicParsing="false" onAction="#handleMuokkaJasen" text="Muokkaa jäsenen tietoja" />
-                        <MenuItem mnemonicParsing="false" onAction="#handleLisaaDebitKortti" text="Lisää uusi pankkikortti" />
-                        <MenuItem mnemonicParsing="false" onAction="#handleMuokkaaPankkiKorttiVali" text="Muokkaa pankkikorttia" />
-                        <MenuItem mnemonicParsing="false" onAction="#handlePoistaPankkiKorttiVali" text="Poista pankkikortti" />
-                  </items>
-                </Menu>
-                
-                <Menu mnemonicParsing="false" text="APUA">
-                  <items>
-                    <MenuItem mnemonicParsing="false" onAction="#Apua" text="Apua" />
+                        
+                        <MenuItem mnemonicParsing="false" onAction="#handleLisaaDebitKortti" text="Lisää Debit" />
+                        <MenuItem mnemonicParsing="false" onAction="#handleLisaaLuottoKortti" text="Lisää Credit" />
+                        <MenuItem mnemonicParsing="false" onAction="#handleLisaaYhdistelmaKortti" text="Lisää Yhdistelmä" />
+                        
+                        <MenuItem mnemonicParsing="false" onAction="#handlePoistaDebit" text="Poista Debit" />
+                        <MenuItem mnemonicParsing="false" onAction="#handlePoistaCredit" text="Poista Credit" />
+                        <MenuItem mnemonicParsing="false" onAction="#handlePoistaYhdistelma" text="Poista Yhdistelmä" />
+
+                        <MenuItem mnemonicParsing="false" onAction="#handleMuokkaaDebit" text="Muokkaa Debit" />
+                        <MenuItem mnemonicParsing="false" onAction="#handleMuokkaaCredit" text="Muokkaa Credit" />
+                        <MenuItem mnemonicParsing="false" onAction="#handleMuokkaaYhdistelma" text="Muokkaa Yhdistelmä" />
+                     </items>
+                  </Menu>
+                  <Menu mnemonicParsing="false" text="APUA">
+                     <items>
+                        <MenuItem mnemonicParsing="false" onAction="#Apua" text="Apua" />
                         <MenuItem mnemonicParsing="false" onAction="#Apua" text="Tietoja" />
-                  </items>
-                </Menu>
-              </menus>
+                     </items>
+                  </Menu>
+               </menus>
             </MenuBar>
-         </top></BorderPane>
+         </top>
+      </BorderPane>
    </top>
 </BorderPane>
